themes/csl/style.css
/* ... */
.term-weekly .title {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  width: 100%;
  height: 220px;
  margin: 1rem 0 1rem 0;
  background-size: cover;
  overflow: hidden; }

.term-weekly .entry-title-wrapper {
  position: relative;
  height: 118px;
  -ms-flex-preferred-size: 90%;
      flex-basis: 90%; }

.term-weekly .entry-title {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  height: 100%;
  -ms-flex-preferred-size: 90%;
      flex-basis: 90%;
  color: white;
  padding-top: 1rem;
  padding-bottom: 1rem; }
  .term-weekly .entry-title .title {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    margin-top: 1rem; }
  .term-weekly .entry-title .alt-title {
    color: #d3d3d3;
    font-size: 1rem;
    font-weight: lighter;
    padding-left: 1rem; }
  .term-weekly .entry-title .alt-title::before {
    content: '['; }
  .term-weekly .entry-title .alt-title::after {
    content: ']'; }

.term-weekly .entry-title-wrapper {
  -webkit-transition: 1s;
  transition: 1s; }

.term-weekly .entry-title-wrapper:hover {
  height: 100%;
  -ms-flex-preferred-size: 100%;
      flex-basis: 100%;
  -webkit-transition: 1s;
  transition: 1s; }

.term-weekly .entry-content {
  position: absolute;
  left: 5%;
  color: white;
  display: none;
  margin-left: auto;
  margin-right: auto;
  width: 90%; }
  .term-weekly .entry-content .content p {
    font-size: 1rem; }

.term-weekly .icon {
  width: 4rem;
  position: absolute;
  right: 0;
  top: 0; }

.term-weekly .location {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex; }

.term-weekly .days {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex; }

.term-weekly .site-main .type-event:nth-child(3n+1) .entry-title-wrapper {
  background-color: rgba(29, 175, 184, 0.75); }

.term-weekly .site-main .type-event:nth-child(3n+2) .entry-title-wrapper {
  background-color: rgba(217, 31, 24, 0.75); }

.term-weekly .site-main .type-event:nth-child(3n+3) .entry-title-wrapper {
  background-color: rgba(255, 203, 51, 0.75); }

@media screen and (min-width: 750px) {
  .term-weekly .title {
    margin-top: 0.5rem;
    height: auto; }
  .term-weekly .wrapper {
    padding-top: 3.5rem; }
  .term-weekly .weekly-event-page-title {
    padding-left: 2.5%;
    color: #fff;
    background: #000000;
    width: 31%;
    height: 4.2rem;
    line-height: 4.2rem; }
  .term-weekly .site-main {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    margin-bottom: 1rem; }
  .term-weekly .type-event {
    -ms-flex-preferred-size: 49%;
        flex-basis: 49%;
    height: 50vw; }
  .term-weekly .entry-content {
    top: 0%;
    font-size: 1.25rem; }
    .term-weekly .entry-content .content p {
      font-size: 1.25rem; }
  .term-weekly .icon {
    width: 6rem; } }

@media screen and (min-width: 1024px) {
  .term-weekly .entry-content {
    top: 20%; } }

/* NEWS */
.post-type-archive-news .article-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  margin-left: auto;
  margin-right: auto;
  max-width: 95%; }

.post-type-archive-news .page-title {
  -ms-flex-preferred-size: 100%;
      flex-basis: 100%;
  text-transform: uppercase;
  color: #000000;
  padding-left: 2%;
  margin-top: 2rem; }

.post-type-archive-news .type-news {
  position: relative;
  height: 75vw;
  -ms-flex-preferred-size: 49%;
      flex-basis: 49%;
  margin-top: 0.5rem;
  background-size: cover;
  background-position: center;
  overflow: hidden; }

.post-type-archive-news .article-title {
  position: absolute;
  bottom: 0%;
  background-color: rgba(0, 0, 0, 0.6);
  min-height: 40%;
  font-size: 0.75rem;
  font-weight: lighter;
  color: white;
  margin: 0;
  width: 100%;
  padding: 1rem 1rem 1rem; }

.post-type-archive-news .twitter-timeline.twitter-timeline-rendered {
  display: none !important; }

.post-type-archive-news .site-footer {
  margin-top: 2rem; }

@media screen and (min-width: 750px) {
  .post-type-archive-news #primary {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex; }
  .post-type-archive-news .content {
    -ms-flex-preferred-size: 60%;
        flex-basis: 60%; }
  .post-type-archive-news .page-title {
    color: #FFFFFF;
    background: #000000;
    width: 49%; }
  .post-type-archive-news .type-news {
    height: 30vw;
    margin-bottom: 0.5rem; }
  .post-type-archive-news .article-title {
    font-size: 1rem; }
  .post-type-archive-news article:nth-child(8n+3) {
    -ms-flex-preferred-size: 100%;
        flex-basis: 100%; }
  .post-type-archive-news article:nth-child(8n+8) {
    -ms-flex-preferred-size: 100%;
        flex-basis: 100%; }
  .post-type-archive-news .twitter-wrapper {
    -ms-flex-preferred-size: 40%;
        flex-basis: 40%;
    margin-top: 5rem;
    padding-right: 1rem;
    overflow-y: scroll;
    height: 215vh; }
  .post-type-archive-news .twitter-timeline.twitter-timeline-rendered {
    width: 100% !important;
    display: block !important; } }
/* ... */

